force-app/main/default/objects/Quote/fields/AVA_SFCLOUD__Inclusive_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Inclusive_Tax_Amount__c</fullName>
    <inlineHelpText>If tax has been indicated to be included for any line items, this is the sum of those included tax amounts</inlineHelpText>
    <label>Inclusive Tax Amount</label>
    <summarizedField>QuoteLineItem.AVA_SFCLOUD__Inclusive_Tax_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>