force-app/main/default/objects/Quote/fields/AVA_SFCLOUD__ShippingHandling_Tax__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__ShippingHandling_Tax__c</fullName>
    <description>Displays the Sales Tax calculated for Shipping and Handling.</description>
    <inlineHelpText>Displays the Sales Tax calculated for Shipping and Handling.</inlineHelpText>
    <label>Shipping and Handling Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>