force-app/main/default/objects/Quote/fields/AVA_SFCLOUD__Tax_Date__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__Tax_Date__c</fullName>
    <description>This field determines the tax calculation date for the Quotes. If left blank, will be the same as the Quote Date.</description>
    <inlineHelpText>This field determines the tax calculation date for the Quotes. If left blank, will be the same as the Quote Date.</inlineHelpText>
    <label>Tax Date</label>
    <type>DateTime</type>
</CustomField>