force-app/main/default/objects/Quote/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Opportunity.Account.FirstName &amp; &quot; &quot; &amp;  Opportunity.Account.MiddleName &amp; &quot; &quot; &amp; Opportunity.Account.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>