force-app/main/default/objects/Quote/fields/Other_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Other_Loss_Reason__c</fullName>
    <label>Other Loss Reason</label>
    <length>18</length>
    <type>Text</type>
</CustomField>