force-app/main/default/objects/Quote/fields/Quote_Task_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Task_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Task Completed</label>
    <type>Checkbox</type>
</CustomField>