force-app/main/default/objects/Quote/fields/rstk__Quote_csoproduct__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_csoproduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Rootstock Configured Product being quoted.</inlineHelpText>
    <label>Configured Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CSO Product Quotes</relationshipLabel>
    <relationshipName>csoproductQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>