force-app/main/default/objects/Quote/fields/rstk__Quote_price__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_price__c</fullName>
    <inlineHelpText>The quoted Sales Price.</inlineHelpText>
    <label>Sales Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>