force-app/main/default/objects/Quote/fields/rstk__Quote_rsjob__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_rsjob__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, indicates that this quote is for a Rootstock job.</inlineHelpText>
    <label>Quote is for a Rootstock Job</label>
    <type>Checkbox</type>
</CustomField>