force-app/main/default/objects/Quote/fields/rstk__Quote_salesdiv__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_salesdiv__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Sales Division from which the quoted product(s) will be sold.</inlineHelpText>
    <label>Sales Division</label>
    <referenceTo>rstk__sydiv__c</referenceTo>
    <relationshipLabel>Sydiv Quotes</relationshipLabel>
    <relationshipName>salesdivQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>