force-app/main/default/objects/Quote/fields/rstk__Quote_sohdr__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_sohdr__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Rootstock Quote or Sales Order that this SF Quote has been converted to.</inlineHelpText>
    <label>Sales Order Header</label>
    <referenceTo>rstk__sohdr__c</referenceTo>
    <relationshipLabel>SO HDR Quotes</relationshipLabel>
    <relationshipName>sohdrQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>