force-app/main/default/objects/Quote/fields/rstk__Quote_soline__c.field-meta.xml
<CustomField>
    <fullName>rstk__Quote_soline__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The Rootstock Quote Line or Sales Order Line that this SF Quote has been converted to.</inlineHelpText>
    <label>Sales Order Line</label>
    <referenceTo>rstk__soline__c</referenceTo>
    <relationshipLabel>SO Line Quotes</relationshipLabel>
    <relationshipName>solineQuotes</relationshipName>
    <type>Lookup</type>
</CustomField>