force-app/main/default/objects/Quote/fields/Shipping_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Estimate__c</fullName>
    <inlineHelpText>Shipping charge is an estimate only.
Actual shipping fee will be calculated at the time of shipment.</inlineHelpText>
    <label>Shipping Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>