force-app/main/default/objects/Quote/fields/Special_Order_GSK__c.field-meta.xml
<CustomField>
    <fullName>Special_Order_GSK__c</fullName>
    <formula>&quot;Items that are quoted are non-refundable, non-returnable, non-cancellable.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Special Order/GSK</label>
    <type>Text</type>
</CustomField>