force-app/main/default/objects/Quote/fields/SubtotalWithoutShipping__c.field-meta.xml
<CustomField>
    <fullName>SubtotalWithoutShipping__c</fullName>
    <formula>Subtotal -  Shipping_Estimate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>