force-app/main/default/objects/Quote/fields/Tax_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Tax_Estimation__c</fullName>
    <label>Tax Estimation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>