force-app/main/default/objects/Quote/validationRules/Cannot_Change_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Status</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Accepted&quot;), 
    ISCHANGED(Status)
  ), 
  AND(
    ISPICKVAL(PRIORVALUE(Status), &quot;Denied&quot;), 
    ISCHANGED(Status)
  )
)</errorConditionFormula>
    <errorMessage>Can&apos;t Change Status If Accepted or Denied</errorMessage>
</ValidationRule>