force-app/main/default/objects/Quote/validationRules/Cant_Accept_Quote_befor_Completing_Task.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Accept_Quote_befor_Completing_Task</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status,&quot;Accepted&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Needs Review&quot;),
Quote_Task_Completed__c == False

)</errorConditionFormula>
    <errorMessage>Please complete the &quot;Follow Up the Quote Estimation&quot;  task before Accepting the Quote.</errorMessage>
</ValidationRule>