force-app/main/default/objects/Quote/validationRules/Cant_Accept_Quote_Directly_from_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Accept_Quote_Directly_from_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status,&quot;Accepted&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Draft&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot accept Quote directly, Please follow the process.</errorMessage>
</ValidationRule>