force-app/main/default/objects/Quote/validationRules/Cant_Move_to_In_Review_with_Vendor.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_Move_to_In_Review_with_Vendor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(Status,&quot;In Review with Vendor&quot;),
ISPICKVAL(PRIORVALUE(Status),&quot;Draft&quot;)
)</errorConditionFormula>
    <errorMessage>You can&apos;t directly go for &quot;In Review with Vendor&quot;, Please follow the process.</errorMessage>
</ValidationRule>