force-app/main/default/objects/Quote/validationRules/If_Status_Denied_Lost_Reason_Needed.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Status_Denied_Lost_Reason_Needed</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND( ISPICKVAL( Status , &quot;Denied&quot;) , ISPICKVAL( Loss_Reason__c , &quot;&quot;)),
AND(ISPICKVAL(Status,&quot;Denied&quot;),ISPICKVAL(Loss_Reason__c,&quot;Other&quot;),Other_Loss_Reason__c == &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Loss Reason Needed. If Loss Reason is &quot;Other&quot;, Please provide the Other Loss Reason</errorMessage>
</ValidationRule>