force-app/main/default/objects/Quote/validationRules/Opportunity_Related_To_Lock_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Related_To_Lock_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) ,
 OpportunityId  =  Opportunity.Id ,
   ISPICKVAL( Opportunity.StageName , &quot;Closed Lost&quot;) )</errorConditionFormula>
    <errorMessage>Closed Lost Opportunity cannot be Modified</errorMessage>
</ValidationRule>